--- a/index3.html
+++ b/index3.html
@@ -87,7 +87,7 @@ transform:scale(1);
   width: 420px;
   height: 350px;
   border-radius: 10px;
-  background-image: url("images/web4.jpg");
+  background-image: url("web4.jpg");
    background-size: 420px 350px;
   background-position: top left;
   animation: mymove 30s infinite;
